test/src/test/k3s/dev/swagger-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swagger-ui
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: swagger-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: swagger-ui
    spec:
      initContainers:
        - name: wait-for-keycloak
          image: ${image.traefik}
          imagePullPolicy: Never
          command: [sh, -c, until echo "`date '+%T'` connect keycloak ..." && wget http://keycloak.default.svc:8080/realms/inoa/protocol/openid-connect/certs --spider --timeout 2 && echo "`date '+%T'` ... connected"; do sleep 0.1 ; done]
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
      containers:
        - name: swagger-ui
          image: docker.io/swaggerapi/swagger-ui:v5.4.2
          imagePullPolicy: IfNotPresent
          envFrom:
            - configMapRef:
                name: swagger-ui-env
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 1
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 60
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            # ugly frontend stuff
            readOnlyRootFilesystem: false
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: spec
              mountPath: /usr/share/nginx/html/openapi.yaml
              subPath: openapi.yaml
              readOnly: true
      automountServiceAccountToken: false
      enableServiceLinks: false
      terminationGracePeriodSeconds: 0
      volumes:
        - name: spec
          configMap:
            name: swagger-ui-spec
