test/src/test/k3s/dev/swagger-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: swagger-ui
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: swagger-ui
